--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
+    "react-qr-code": "^2.0.12",
     "react-slick": "^0.30.2"
   },
   "devDependencies": {
